# Dialogue-Driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/dialogue_driver/: choice_command.h  combined_criteria.h  constant_expression.h  conversation.h  conversation_node.h  driver.h  entry_node.h  expression.h  fact.h  fact_collection.h  i_conversation_command.h  icriteria.h  iobridge.h  operator.h  output_command.h  query.h  scene.h  story.h  story_entity.h  story_state.h
include/dialogue_driver_utils/: node_builder.h
src/: CMakeLists.txt  combined_criteria.cpp  constant_expression.cpp  conversation_node.cpp  driver.cpp  entry_node.cpp  expression.cpp  fact.cpp  fact_collection.cpp  main.cpp  node_builder.cpp  scene.cpp  story.cpp  story_state.cpp
tests/: CMakeLists.txt  test_driver.cpp
tests/dll_interface/: test_driver_interface.cpp
tests/end_to_end/: main.cpp
tests/fact_system/: combined_criteria_tests.cpp  fact_tests.cpp  story_entity_tests.cpp
tests/internal/: combined_criteria_tests.cpp  expression_tests.cpp  fact_tests.cpp  story_state_tests.cpp  test_driver_internal.cpp
tests/node_system/: choice_command_tests.cpp  conversation_node_tests.cpp  iobridge_tests.cpp  node_tests.cpp  scene_tests.cpp  story_tests.cpp
